Adding styles for fixed width tabs

--- a/demos/app/tabs/sample.component.html
+++ b/demos/app/tabs/sample.component.html
@@ -67,7 +67,7 @@
                         </p>
                     </div>
                 </igx-tabs-group>
-                <igx-tabs-group label="Tab2 Tab2 Tab2 tab">
+                <igx-tabs-group label="Tab2 Tab2 Tab2 tab" icon="movies">
                     <div class="tab-content">
                         <h3>Tab 2 Content</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae malesuada odio. Praesent ante
@@ -86,45 +86,45 @@
                             </igx-avatar>
                             </ng-template>
                     </igx-tabs-group> -->
-                <igx-tabs-group label="Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4">
+                <igx-tabs-group label="Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4" icon="movies">
                     <div class="tab-content">
                         Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4
                     </div>
                 </igx-tabs-group>
-                <igx-tabs-group label="Tab5 Tab5 Tab5 Tab5 Tab5 Tab5 Tab5 Tab5">
+                <igx-tabs-group label="Tab5 Tab5 Tab5 Tab5 Tab5 Tab5 Tab5 Tab5" icon="movies">
                     <div class="tab-content">
                         Tab5 Tab5 Tab5 Tab5 Tab5 Tab5 Tab5 Tab5
                     </div>
                 </igx-tabs-group>
-                <igx-tabs-group label="Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6">
+                <igx-tabs-group label="Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6" icon="movies">
                     <div class="tab-content">
                         Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6"
                     </div>
                 </igx-tabs-group>
-                <igx-tabs-group label="Tab7 Tab7 Tab7 Tab7 Tab7">
+                <igx-tabs-group label="Tab7 Tab7 Tab7 Tab7 Tab7" icon="movies">
                     Tab7 Tab7 Tab7 Tab7 Tab7
                 </igx-tabs-group>
-                <igx-tabs-group label="Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8">
+                <igx-tabs-group label="Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8" icon="movies">
                     <div class="tab-content">
                         Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8
                     </div>
                 </igx-tabs-group>
-                <igx-tabs-group label="Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9">
+                <igx-tabs-group label="Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9" icon="movies">
                     <div class="tab-content">
                         Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9
                     </div>
                 </igx-tabs-group>
-                <igx-tabs-group label="Tab10 Tab10 Tab10 Tab10 Tab10 Tab10 Tab10 Tab10">
+                <igx-tabs-group label="Tab10 Tab10 Tab10 Tab10 Tab10 Tab10 Tab10 Tab10" icon="movies">
                     <div class="tab-content">
                         Tab10 Tab10 Tab10 Tab10 Tab10 Tab10 Tab10 Tab10
                     </div>
                 </igx-tabs-group>
-                <igx-tabs-group label="Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 ">
+                <igx-tabs-group label="Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11" icon="movies">
                     <div class="tab-content">
                         Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11
                     </div>
                 </igx-tabs-group>
-                <igx-tabs-group label="Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12">
+                <igx-tabs-group label="Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12" icon="movies">
                     <div class="tab-content">
                         Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12
                     </div>
