--- a/demos/app/tabs/sample.component.html
+++ b/demos/app/tabs/sample.component.html
@@ -50,86 +50,89 @@
 
         <article class="sample-column">
             <h4 class="sample-title">Three item tabbar</h4>
-            <igx-tabs tabsType="fixed">
-                <igx-tabs-group label="Tab1" icon="movies">
-                    <div class="tab-content">
-                        <h3>Tab 1 Content</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius sapien ligula. Donec
-                            consectetur accumsan suscipit. Praesent rutrum tellus blandit bibendum cursus. Vestibulum urna
-                            arcu, bibendum nec molestie ac, varius congue massa. Mauris porttitor viverra lacus.
-                        </p>
-                        <h4>Tab 1 Content</h4>
-                        <p>
-                            Donec efficitur purus id urna dapibus, vitae pharetra orci pellentesque. Vestibulum id lacus a magna euismod volutpat id
-                            in mi. Etiam a nunc ut tellus dictum porta. Donec in ligula a arcu sollicitudin finibus. Vivamus
-                            id lorem pulvinar, accumsan justo vitae, vehicula diam. Mauris vel quam at velit venenatis vulputate
-                            in quis nisl.
-                        </p>
-                    </div>
-                </igx-tabs-group>
-                <igx-tabs-group label="Tab2 Tab2 Tab2 tab" icon="movies">
-                    <div class="tab-content">
-                        <h3>Tab 2 Content</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae malesuada odio. Praesent ante
-                            lectus, porta a eleifend vel, sodales eu nisl. Vivamus sit amet purus eu lectus cursus rhoncus
-                            quis non ex. Cras ac nulla sed arcu finibus volutpat. Vivamus risus ipsum, pharetra a augue nec,
-                            euismod fringilla odio. Integer id velit rutrum, accumsan ante a, semper nunc. Phasellus ultrices
-                            tincidunt imperdiet. Nullam vulputate mauris diam. Nullam elementum, libero vel varius fermentum,
-                            lorem ex bibendum nulla, pretium lacinia erat nibh vel massa. In hendrerit, sapien ac mollis
-                            iaculis, dolor tellus malesuada sem, a accumsan lectus nisl facilisis leo. Curabitur consequat
-                            sit amet nulla at consequat. Duis volutpat tristique luctus.</p>
-                    </div>
-                </igx-tabs-group>
-                <!-- <igx-tabs-group label="Tab3 Tab3 Tab3 Tab3">
-                        <ng-template igxTab>
-                            <igx-avatar initials="T1">
-                            </igx-avatar>
-                            </ng-template>
-                    </igx-tabs-group> -->
-                <igx-tabs-group label="Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4" icon="movies">
-                    <div class="tab-content">
-                        Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4
-                    </div>
-                </igx-tabs-group>
-                <igx-tabs-group label="Tab5 Tab5 Tab5 Tab5 Tab5 Tab5 Tab5 Tab5" icon="movies">
-                    <div class="tab-content">
-                        Tab5 Tab5 Tab5 Tab5 Tab5 Tab5 Tab5 Tab5
-                    </div>
-                </igx-tabs-group>
-                <igx-tabs-group label="Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6" icon="movies">
-                    <div class="tab-content">
-                        Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6"
-                    </div>
-                </igx-tabs-group>
-                <igx-tabs-group label="Tab7 Tab7 Tab7 Tab7 Tab7" icon="movies">
-                    Tab7 Tab7 Tab7 Tab7 Tab7
-                </igx-tabs-group>
-                <igx-tabs-group label="Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8" icon="movies">
-                    <div class="tab-content">
-                        Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8
-                    </div>
-                </igx-tabs-group>
-                <igx-tabs-group label="Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9" icon="movies">
-                    <div class="tab-content">
-                        Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9
-                    </div>
-                </igx-tabs-group>
-                <igx-tabs-group label="Tab10 Tab10 Tab10 Tab10 Tab10 Tab10 Tab10 Tab10" icon="movies">
-                    <div class="tab-content">
-                        Tab10 Tab10 Tab10 Tab10 Tab10 Tab10 Tab10 Tab10
-                    </div>
-                </igx-tabs-group>
-                <igx-tabs-group label="Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11" icon="movies">
-                    <div class="tab-content">
-                        Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11
-                    </div>
-                </igx-tabs-group>
-                <igx-tabs-group label="Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12" icon="movies">
-                    <div class="tab-content">
-                        Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12
-                    </div>
-                </igx-tabs-group>
-            </igx-tabs>
+
+            <div class="tabs-costume-theme">
+                <igx-tabs tabsType="fixed">
+                    <igx-tabs-group label="Tab1" icon="movies">
+                        <div class="tab-content">
+                            <h3>Tab 1 Content</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius sapien ligula. Donec
+                                consectetur accumsan suscipit. Praesent rutrum tellus blandit bibendum cursus. Vestibulum urna
+                                arcu, bibendum nec molestie ac, varius congue massa. Mauris porttitor viverra lacus.
+                            </p>
+                            <h4>Tab 1 Content</h4>
+                            <p>
+                                Donec efficitur purus id urna dapibus, vitae pharetra orci pellentesque. Vestibulum id lacus a magna euismod volutpat id
+                                in mi. Etiam a nunc ut tellus dictum porta. Donec in ligula a arcu sollicitudin finibus. Vivamus
+                                id lorem pulvinar, accumsan justo vitae, vehicula diam. Mauris vel quam at velit venenatis vulputate
+                                in quis nisl.
+                            </p>
+                        </div>
+                    </igx-tabs-group>
+                    <igx-tabs-group label="Tab2 Tab2 Tab2 tab" icon="movies">
+                        <div class="tab-content">
+                            <h3>Tab 2 Content</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae malesuada odio. Praesent ante
+                                lectus, porta a eleifend vel, sodales eu nisl. Vivamus sit amet purus eu lectus cursus rhoncus
+                                quis non ex. Cras ac nulla sed arcu finibus volutpat. Vivamus risus ipsum, pharetra a augue nec,
+                                euismod fringilla odio. Integer id velit rutrum, accumsan ante a, semper nunc. Phasellus ultrices
+                                tincidunt imperdiet. Nullam vulputate mauris diam. Nullam elementum, libero vel varius fermentum,
+                                lorem ex bibendum nulla, pretium lacinia erat nibh vel massa. In hendrerit, sapien ac mollis
+                                iaculis, dolor tellus malesuada sem, a accumsan lectus nisl facilisis leo. Curabitur consequat
+                                sit amet nulla at consequat. Duis volutpat tristique luctus.</p>
+                        </div>
+                    </igx-tabs-group>
+                    <!-- <igx-tabs-group label="Tab3 Tab3 Tab3 Tab3">
+                            <ng-template igxTab>
+                                <igx-avatar initials="T1">
+                                </igx-avatar>
+                                </ng-template>
+                        </igx-tabs-group> -->
+                    <igx-tabs-group label="Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4" icon="movies">
+                        <div class="tab-content">
+                            Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4 Tab4
+                        </div>
+                    </igx-tabs-group>
+                    <igx-tabs-group label="Tab5 Tab5 Tab5 Tab5 Tab5 Tab5 Tab5 Tab5" icon="movies">
+                        <div class="tab-content">
+                            Tab5 Tab5 Tab5 Tab5 Tab5 Tab5 Tab5 Tab5
+                        </div>
+                    </igx-tabs-group>
+                    <igx-tabs-group label="Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6" icon="movies">
+                        <div class="tab-content">
+                            Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6 Tab6"
+                        </div>
+                    </igx-tabs-group>
+                    <igx-tabs-group label="Tab7 Tab7 Tab7 Tab7 Tab7" icon="movies">
+                        Tab7 Tab7 Tab7 Tab7 Tab7
+                    </igx-tabs-group>
+                    <igx-tabs-group label="Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8" icon="movies">
+                        <div class="tab-content">
+                            Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8 Tab8
+                        </div>
+                    </igx-tabs-group>
+                    <igx-tabs-group label="Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9" icon="movies">
+                        <div class="tab-content">
+                            Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9 Tab9
+                        </div>
+                    </igx-tabs-group>
+                    <igx-tabs-group label="Tab10 Tab10 Tab10 Tab10 Tab10 Tab10 Tab10 Tab10" icon="movies">
+                        <div class="tab-content">
+                            Tab10 Tab10 Tab10 Tab10 Tab10 Tab10 Tab10 Tab10
+                        </div>
+                    </igx-tabs-group>
+                    <igx-tabs-group label="Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11" icon="movies">
+                        <div class="tab-content">
+                            Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11 Tab11
+                        </div>
+                    </igx-tabs-group>
+                    <igx-tabs-group label="Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12" icon="movies">
+                        <div class="tab-content">
+                            Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12 Tab12
+                        </div>
+                    </igx-tabs-group>
+                </igx-tabs>
+            </div>
         </article>
 
         <!-- <article class="sample-column">
