--- a/demos/style/igniteui-theme.scss
+++ b/demos/style/igniteui-theme.scss
@@ -34,6 +34,28 @@ $exclude: (
 @include igx-core();
 @include igx-theme($default-palette);
 
+$my-tabs-theme: igx-tabs-theme(
+    $item-text-color: rgba(255, 255, 255, .8),
+    $item-hover-color: rgba(255, 255, 255, .8),
+
+    $item-background: igx-color($default-palette, 'primary', 500),
+    $item-hover-background: igx-color($default-palette, 'primary', 400),
+
+    $item-active-background: igx-color($default-palette, 'primary', 600),
+    $indicator-color: rgba(255, 255, 255, .8),
+
+    $button-color: rgba(255, 255, 255, .8),
+    $button-background: igx-color($default-palette, 'primary', 500),
+    $button-hover-background: igx-color($default-palette, 'primary', 600),
+    $button-hover-color: #fff
+);
+
+
+.tabs-costume-theme {
+    @include igx-tabs($my-tabs-theme);
+}
+
+
 // @mixin gen-color-class($name, $variant, $prefix, $suffix) {
 //     $prefix: if($prefix, '#{$prefix}-', '');
 //     $suffix: if($suffix, '-#{$suffix}', '');
