--- a/src/core/styles/components/tabs/_tabs-theme.scss
+++ b/src/core/styles/components/tabs/_tabs-theme.scss
@@ -52,6 +52,14 @@
         $item-hover-color: text-contrast($item-hover-background);
     }
 
+    @if not($item-active-color) and $item-active-background {
+        $item-active-color: text-contrast($item-active-background);
+    }
+
+    @if not($item-active-icon-color) and $item-active-background {
+        $item-active-icon-color: text-contrast($item-active-background);
+    }
+
     @if not($button-color) and $button-background {
         $button-color: text-contrast($button-background);
     }
@@ -128,6 +136,7 @@
     $label-line-height: rem(12px, 16px);
     $tabs-animation-function: cubic-bezier(.35, 0, .25, 1);
     $tabs-animation-function: cubic-bezier(.35, 0, .25, 1);
+    $icon-label-space: rem(10px);
 
     %igx-tabs {
         display: flex;
@@ -184,7 +193,7 @@
 
         &:focus {
             background: map-get($this, 'item-active-background');
-            color: map-get($this, 'item-active-color');
+            color: map-get($this, 'item-active-hover-color');
         }
 
         &:hover {
@@ -197,15 +206,15 @@
         ));
     }
 
-    %igx-tabs__header-menu-item--disabled {
-        outline: 0;
-        opacity: .5;
-        cursor: default;
-        pointer-events: none;
-    }
-
     %igx-tabs__header-menu-item--selected {
         outline: 0;
+        background: map-get($this, 'item-active-background');
+        color: map-get($this, 'item-active-color');
+
+        &:focus {
+            background: map-get($this, 'item-active-background');
+            color: map-get($this, 'item-active-color');
+        }
 
         &:hover {
             background: map-get($this, 'item-active-background');
@@ -213,15 +222,26 @@
         }
 
         %igx-tabs__header-menu-item-icon {
-            color: map-get($this, 'item-active-icon-color')
+            color: map-get($this, 'item-active-icon-color');
         }
+    }
+
+
+    %igx-tabs__header-menu-item--disabled {
+        outline: 0;
+        opacity: .5;
+        cursor: default;
+        pointer-events: none;
     }
 
     %igx-tabs__header-menu-item-icon {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding-bottom: rem(10px);
+
+        + %igx-tabs__item-label {
+            padding-top: $icon-label-space;
+        }
     }
 
     %igx-tabs__header-menu-item-indicator {
@@ -236,6 +256,7 @@
 
     // SCROLL BUTTONS
     %igx-tabs__header-button {
+        z-index: 1;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -287,6 +308,10 @@
         line-height: $label-line-height;
         max-width: 100%;
         text-align: center;
+
+        + %igx-tabs__header-menu-item-icon {
+            padding-top: $icon-label-space;
+        }
     }
 
     %igx-tabs__content-fixed {
@@ -310,6 +335,7 @@
     %igx-tabs__group--selected {
         display: inline-flex;
         min-width: 100%;
+        padding: 0 rem(20px);
     }
 
     %igx-tabs--fixed {
