Fix the line-height for the text inside tabas

--- a/src/core/styles/components/tabs/_tabs-theme.scss
+++ b/src/core/styles/components/tabs/_tabs-theme.scss
@@ -133,7 +133,7 @@
     $tabs-height: rem(48px);
     $tabs-height-icon: rem(77px);
     $label-font-size: rem(14px, 16px);
-    $label-line-height: $label-font-size;
+    $label-line-height: rem(16px, 16px);
     $tabs-animation-function: cubic-bezier(.35, 0, .25, 1);
     $tabs-animation-function: cubic-bezier(.35, 0, .25, 1);
     $icon-label-space: rem(10px);
