--- a/demos/app/tabs/sample.component.css
+++ b/demos/app/tabs/sample.component.css
@@ -20,3 +20,25 @@
     z-index: 5;
     position: relative;
 }
+
+.item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.item > [igxLabel],
+.item > .person {
+    position: absolute;
+    margin-left: 72px;
+}
+
+.person .name {
+    padding: 0;
+    margin: 0;
+}
+
+.person .phone {
+    font-size: 12px;
+    color: gray;
+}
